[package]
name = "nt_client"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast NetworkTables 4.1 client"
repository = "https://github.com/DatAsianBoi123/nt_client"
license = "MIT"
keywords = ["wpi", "wpilib", "networktables", "NT"]
categories = ["api-bindings"]

[lib]
name = "nt_client"
path = "src/lib.rs"

[dependencies]
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
rand = "0.8.5"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-test = "0.4.4"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"

